Correção acesso ao css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Alex Guilherme - Portfólio</title>
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="cssestilo.css">
 </head>
 <body>
   <div class="container">
