--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="sobre">
       <h2>Sobre Mim</h2>
-      <p>Meu nome é Alex Guilherme, tenho 25 anos e atualmente curso Análise e Desenvolvimento de Sistemas. 
+      <p>Meu nome é Alex Guilherme, tenho 35 anos e atualmente curso Análise e Desenvolvimento de Sistemas. 
          Sou apaixonado por tecnologia, desenvolvimento web e sempre estou buscando evoluir como programador.</p>
     </section>
 
@@ -32,7 +32,7 @@
       <h2>Formação</h2>
       <ul>
         <li>Cursando Análise e Desenvolvimento de Sistemas</li>
-        <li>Inglês intermediário</li>
+        <li>Inglês básico em evolução</li>
         <li>Conhecimentos: HTML, CSS, Python, JavaScript</li>
       </ul>
     </section>
