--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
 
     <nav>
       <ul>
-        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#inicio">Início</a></li>
         <li><a href="#formacao">Formação</a></li>
         <li><a href="#projetos">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
 
-    <section id="sobre">
+    <section id="inicio">
       <h2>Sobre Mim</h2>
-      <p>Meu nome é Alex Guilherme, tenho 35 anos e atualmente curso Análise e Desenvolvimento de Sistemas. 
-         Sou apaixonado por tecnologia, desenvolvimento web e sempre estou buscando evoluir como programador.</p>
+      <p>Meu nome é Alex Guilherme, sou estudante de Análise e Desenvolvimento de Sistemas. Tenho grande interesse por desenvolvimento web e estou constantemente me desafiando a aprender mais sobre criação de sites, sistemas e lógica de programação.
+Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender como as coisas funcionam “por trás dos bastidores”. Tenho perfil curioso, gosto de experimentar, testar ideias e principalmente de ver resultados concretos acontecendo na prática. Estou sempre em busca de crescimento, tanto técnico quanto pessoal.</p>
     </section>
 
     <section id="formacao">
       <h2>Formação</h2>
       <ul>
-        <li>Cursando Análise e Desenvolvimento de Sistemas</li>
-        <li>Inglês básico em evolução</li>
-        <li>Conhecimentos: HTML, CSS, Python, JavaScript</li>
-      </ul>
+  <li>Cursando Análise e Desenvolvimento de Sistemas</li>
+  <li>Inglês em desenvolvimento (estudando atualmente)</li>
+  <li>Conhecimentos: HTML, CSS, JavaScript, Python, Banco de Dados</li>
+</ul>
+
     </section>
 
     <section id="projetos">
@@ -43,13 +44,13 @@
       <div class="card">
         <h3>Sistema de Loja de Livros</h3>
         <p>Sistema de Livraria feito em Python.</p>
-        <a href="#">Ver projeto</a>
+        <a href="https://alexguilhermess.github.io/livraria/" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <div class="card">
         <h3>Sistema de Loja de Xerox</h3>
         <p>Sistema de Xerox desenvolvido em Python.</p>
-        <a href="#">Ver projeto</a>
+        <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
 
