--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <div class="card">
         <h3>Sistema de Loja de Livros</h3>
         <p>Sistema de Livraria feito em Python.</p>
-        <a href="https://alexguilhermess.github.io/livraria/" target="_blank">Ver projeto no GitHub</a>
+        <a href="https://github.com/AlexGuilhermess/Livraria" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <div class="card">
