--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <div class="card">
         <h3>Sistema de Loja de Livros</h3>
         <p>Sistema de Livraria feito em Python.</p>
-        <a href="https://github.com/AlexGuilhermess/Livraria" target="_blank">Ver projeto no GitHub</a>
+        <a href="https://github.com/AlexGuilhermess/livraria" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <div class="card">
-        <h3>Sistema de Loja de Xerox</h3>
-        <p>Sistema de Xerox desenvolvido em Python.</p>
+        <h3>Sistema de Copiadora</h3>
+        <p>Sistema de Copiadora desenvolvido em Python.</p>
         <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
