--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="inicio">
       <h2>Sobre Mim</h2>
-      <p>Meu nome é Alex Guilherme, sou estudante de Análise e Desenvolvimento de Sistemas. Tenho grande interesse por desenvolvimento web e estou constantemente me desafiando a aprender mais sobre criação de sites, sistemas e lógica de programação.
+      <p>Meu nome é Alex Guilherme, sou estudante de Análise e Desenvolvimento de Sistemas. Tenho grande interesse pela área e estou constantemente me desafiando a aprender mais sobre criação de sites, sistemas e lógica de programação.
 Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender como as coisas funcionam “por trás dos bastidores”. Tenho perfil curioso, gosto de experimentar, testar ideias e principalmente de ver resultados concretos acontecendo na prática. Estou sempre em busca de crescimento, tanto técnico quanto pessoal.</p>
     </section>
 
@@ -34,6 +34,9 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
   <li>Cursando Análise e Desenvolvimento de Sistemas</li>
   <li>Inglês em desenvolvimento (estudando atualmente)</li>
   <li>Conhecimentos: HTML, CSS, JavaScript, Python, Banco de Dados</li>
+  <li>Power BI - Data B(2022)</li>
+  <li>Dashboard - Hashtag Treinamentos (2021) </li>
+  <li>Excel - Senai / Leopoldina (2019)</li>
 </ul>
 
     </section>
@@ -42,14 +45,14 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <h2>Portfólio</h2>
 
       <div class="card">
-        <h3>Sistema de Loja de Livros</h3>
-        <p>Sistema de Livraria feito em Python.</p>
+        <h3>Sistema de Livraria</h3>
+        <p>Sistema desenvolvido em Python.</p>
         <a href="https://github.com/AlexGuilhermess/livraria" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <div class="card">
         <h3>Sistema de Copiadora</h3>
-        <p>Sistema de Copiadora desenvolvido em Python.</p>
+        <p>Sistema desenvolvido em Python.</p>
         <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
