--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
         <p>Sistema desenvolvido em Python.</p>
         <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
       </div>
+
+      <div class="card">
+        <h3>Locadora de Veículos</h3>
+        <p>Banco de dados.</p>
+        <a href="https://github.com/alexguilhermess/Locadora_veiculo" target="_blank">Ver projeto no GitHub</a>
+      </div>
     </section>
 
     <section id="contato">
