--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
 
       <div class="card">
         <h3>Locadora de Veículos</h3>
-        <p>Banco de dados.</p>
+        <p>Banco de dados relacional utilizando MySQL</p>
         <a href="https://github.com/alexguilhermess/Locadora_veiculo" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
