--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <!-- Projeto 1 -->
       <div class="card">
         <h3>Sistema de Livraria</h3>
-        <p>Sistema desenvolvido em Python.</p>
+        <p>Sistema desenvolvido em Python</p>
         <a href="https://github.com/AlexGuilhermess/livraria" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <!-- Projeto 2 -->
       <div class="card">
         <h3>Sistema de Copiadora</h3>
-        <p>Sistema desenvolvido em Python.</p>
+        <p>Sistema desenvolvido em Python</p>
         <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
       </div>
 
