--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <div class="card">
         <h3>Sistema de Livraria</h3>
         <p>Sistema desenvolvido em Python</p>
-        <a href="https://github.com/AlexGuilhermess/livraria" target="_blank">Ver projeto no GitHub</a>
+        <a href="https://github.com/AlexGuilhermess/Livraria/blob/main/livraria_alex.py" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <!-- Projeto 2 -->
       <div class="card">
         <h3>Sistema de Copiadora</h3>
         <p>Sistema desenvolvido em Python</p>
-        <a href="https://github.com/alexguilhermess/copiadora" target="_blank">Ver projeto no GitHub</a>
+        <a href="https://github.com/AlexGuilhermess/Copiadora/blob/main/Copiadora_alex.py" target="_blank">Ver projeto no GitHub</a>
       </div>
 
       <!-- Projeto 3 -->
       <div class="card">
         <h3>Locadora de Veículos</h3>
         <p>Banco de dados relacional utilizando MySQL</p>
-        <a href="https://github.com/alexguilhermess/Locadora_veiculo" target="_blank">Ver projeto no GitHub</a>
+        <a href=https://github.com/AlexGuilhermess/Locadora_Veiculo/blob/main/Trabalho%20-%20Banco%20de%20dados_Locadora_Veiculos.sql" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
 
