--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender 
       <div class="card">
         <h3>Locadora de Veículos</h3>
         <p>Banco de dados relacional utilizando MySQL</p>
-        <a href=https://github.com/AlexGuilhermess/Locadora_Veiculo/blob/main/Trabalho%20-%20Banco%20de%20dados_Locadora_Veiculos.sql" target="_blank">Ver projeto no GitHub</a>
+        <a href="https://github.com/AlexGuilhermess/Locadora_Veiculo/blob/main/locadora_veiculo.sql" target="_blank">Ver projeto no GitHub</a>
       </div>
     </section>
 
