--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="inicio">
       <h2>Sobre Mim</h2>
       <p>Meu nome é Alex Guilherme, sou estudante de Análise e Desenvolvimento de Sistemas. Tenho grande interesse pela área e estou constantemente me desafiando a aprender mais sobre criação de sites, sistemas e lógica de programação.
-Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender como as coisas funcionam “por trás dos bastidores”. Tenho perfil curioso, gosto de experimentar, testar ideias e principalmente de ver resultados concretos acontecendo na prática. Estou sempre em busca de crescimento, tanto técnico quanto pessoal.</p>
+Encaro a tecnologia como uma ferramenta de transformação, e gosto de entender como as coisas funcionam “por trás dos bastidores”. Tenho perfil curioso, gosto de experimentar e principalmente de ver resultados concretos acontecendo na prática. Estou sempre em busca de crescimento, tanto técnico quanto pessoal.</p>
     </section>
 
     <!-- Seção de formação -->
